# apps/App/src/middleware/tsoa/swagger.json
@@ -11,6 +11,9 @@
 					"id": {
 						"type": "string"
 					},
+					"version": {
+						"type": "string"
+					},
 					"type": {
 						"type": "string"
 					},
@@ -38,6 +41,7 @@
 				},
 				"required": [
 					"id",
+					"version",
 					"type",
 					"bloodPressure",
 					"cholestrol",
@@ -54,12 +58,16 @@
 					"id": {
 						"type": "string"
 					},
+					"version": {
+						"type": "string"
+					},
 					"type": {
 						"type": "string"
 					}
 				},
 				"required": [
 					"id",
+					"version",
 					"type"
 				],
 				"type": "object",
@@ -68,6 +76,9 @@
 			"PatientInfo": {
 				"properties": {
 					"id": {
+						"type": "string"
+					},
+					"version": {
 						"type": "string"
 					},
 					"type": {
@@ -79,7 +90,7 @@
 					"lastName": {
 						"type": "string"
 					},
-					"bloodType": {
+					"bloodTypes": {
 						"type": "string"
 					},
 					"gender": {
@@ -95,10 +106,11 @@
 				},
 				"required": [
 					"id",
+					"version",
 					"type",
 					"firstName",
 					"lastName",
-					"bloodType",
+					"bloodTypes",
 					"gender",
 					"age",
 					"race"
@@ -177,7 +189,7 @@
 					},
 					{
 						"in": "query",
-						"name": "type",
+						"name": "version",
 						"required": true,
 						"schema": {
 							"type": "string"
