# apps/App/src/types/patient.ts
@@ -1,9 +1,10 @@
 export class PatientInfo {
   id: string;
+  version: string;
   type: string;
   firstName: string;
   lastName: string;
-  bloodType: string;
+  bloodTypes: string;
   gender: string;
   age: number;
   race: string;
@@ -11,11 +12,13 @@ export class PatientInfo {
 
 export class PatientBase {
   id: string;
+  version: string;
   type: string;
 }
 
 export class PatientCheckup {
   id: string;
+  version: string;
   type: string;
   bloodPressure: string;
   cholestrol: string;
